--- a/Information-System/src/main/resources/templates/fragments/menu.html
+++ b/Information-System/src/main/resources/templates/fragments/menu.html
@@ -1,5 +1,5 @@
 <div th:fragment="menu">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-2md mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-lg mb-4">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-4 text-primary text-center" href="/">Оптичний завод</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
