--- a/Information-System/src/main/resources/templates/categories.html
+++ b/Information-System/src/main/resources/templates/categories.html
@@ -9,7 +9,23 @@
 <div th:replace="fragments/menu :: menu"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Категорії продукції</h1>
-    <a href="/categories/add" class="btn btn-primary mb-3">Додати категорію</a>
+    <form class="row g-3 mb-4" method="get" action="/categories">
+        <div class="col-md-4">
+            <input type="text" class="form-control" name="name" placeholder="Назва категорії" th:value="${param.name}">
+        </div>
+        <div class="col-md-4">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="withProducts" id="withProducts" th:checked="${param.withProducts}">
+                <label class="form-check-label" for="withProducts">Лише категорії з продуктами (DISTINCT)</label>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-primary w-100">Застосувати фільтр</button>
+        </div>
+        <div class="col-md-2">
+            <a href="/categories" class="btn btn-secondary w-100">Очистити фільтри</a>
+        </div>
+    </form>
     <table class="table table-bordered table-striped shadow-lg">
         <thead>
         <tr>
@@ -21,16 +37,17 @@
         </thead>
         <tbody>
         <tr th:each="category : ${categories}">
-            <td th:text="${category.id}"></td>
-            <td th:text="${category.name}"></td>
-            <td th:text="${category.description}"></td>
+            <td th:text="${category['id']}"></td>
+            <td th:text="${category['name']}"></td>
+            <td th:text="${category['description']}"></td>
             <td>
-                <a th:href="@{'/categories/edit/' + ${category.id}}" class="btn btn-warning btn-sm">Редагувати</a>
-                <a th:href="@{'/categories/delete/' + ${category.id}}" class="btn btn-danger btn-sm">Видалити</a>
+                <a th:href="@{'/categories/edit/' + ${category['id']}}" class="btn btn-warning btn-sm">Редагувати</a>
+                <a th:href="@{'/categories/delete/' + ${category['id']}}" class="btn btn-danger btn-sm">Видалити</a>
             </td>
         </tr>
         </tbody>
     </table>
+    <a href="/categories/add" class="btn btn-primary mt-3">Додати категорію</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
