--- a/Information-System/src/main/resources/templates/clients.html
+++ b/Information-System/src/main/resources/templates/clients.html
@@ -9,30 +9,77 @@
 <div th:replace="fragments/menu :: menu"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Клієнти</h1>
-    <a href="/clients/add" class="btn btn-primary mb-3">Додати клієнта</a>
+    <form class="row g-3 mb-4" method="get" action="/clients">
+        <div class="col-md-3">
+            <select class="form-select" name="name">
+                <option value="">Назва</option>
+                <option th:each="c : ${clients}" th:value="${c['name']}" th:text="${c['name']}" th:selected="${param.name} == ${c['name']}"></option>
+            </select>
+        </div>
+        <div class="col-md-3">
+            <input type="text" class="form-control" name="contact" placeholder="Контакт" th:value="${param.contact}">
+        </div>
+        <div class="col-md-3">
+            <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
+        </div>
+        <div class="col-md-2">
+            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть ≥" th:value="${param.havingCount}">
+        </div>
+        <div class="col-md-12">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="withProcessingOrders" id="withProcessingOrders" th:checked="${param.withProcessingOrders}">
+                <label class="form-check-label" for="withProcessingOrders">Лише з замовленнями в обробці</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="groupBy" id="groupBy" th:checked="${param.groupBy}">
+                <label class="form-check-label" for="groupBy">Групувати та HAVING</label>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-primary w-100">Застосувати фільтр</button>
+        </div>
+        <div class="col-md-2">
+            <a href="/clients" class="btn btn-secondary w-100">Очистити фільтри</a>
+        </div>
+    </form>
     <table class="table table-bordered table-striped shadow-lg">
         <thead>
-        <tr>
+        <tr th:if="${!groupBy}">
             <th>ID</th>
             <th>Назва</th>
             <th>Контакт</th>
             <th>Адреса</th>
             <th>Дії</th>
         </tr>
+        <tr th:if="${groupBy}">
+            <th>ID</th>
+            <th>Назва</th>
+            <th>Контакт</th>
+            <th>Адреса</th>
+            <th>Кількість замовлень</th>
+        </tr>
         </thead>
         <tbody>
-        <tr th:each="client : ${clients}">
-            <td th:text="${client.id}"></td>
-            <td th:text="${client.name}"></td>
-            <td th:text="${client.contact}"></td>
-            <td th:text="${client.address}"></td>
+        <tr th:if="${!groupBy}" th:each="client : ${clients}">
+            <td th:text="${client['id']}"></td>
+            <td th:text="${client['name']}"></td>
+            <td th:text="${client['contact']}"></td>
+            <td th:text="${client['address']}"></td>
             <td>
-                <a th:href="@{'/clients/edit/' + ${client.id}}" class="btn btn-warning btn-sm">Редагувати</a>
-                <a th:href="@{'/clients/delete/' + ${client.id}}" class="btn btn-danger btn-sm">Видалити</a>
+                <a th:href="@{'/clients/edit/' + ${client['id']}}" class="btn btn-warning btn-sm">Редагувати</a>
+                <a th:href="@{'/clients/delete/' + ${client['id']}}" class="btn btn-danger btn-sm">Видалити</a>
             </td>
+        </tr>
+        <tr th:if="${groupBy}" th:each="row : ${clients}">
+            <td th:text="${row['id']}"></td>
+            <td th:text="${row['name']}"></td>
+            <td th:text="${row['contact']}"></td>
+            <td th:text="${row['address']}"></td>
+            <td th:text="${row['order_count']}"></td>
         </tr>
         </tbody>
     </table>
+    <a href="/clients/add" class="btn btn-primary mt-3">Додати клієнта</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
