--- a/Information-System/src/main/resources/templates/suppliers.html
+++ b/Information-System/src/main/resources/templates/suppliers.html
@@ -9,7 +9,26 @@
 <div th:replace="fragments/menu :: menu"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Постачальники</h1>
-    <a href="/suppliers/add" class="btn btn-primary mb-3">Додати постачальника</a>
+    <form class="row g-3 mb-4" method="get" action="/suppliers">
+        <div class="col-md-3">
+            <select class="form-select" name="name">
+                <option value="">Назва</option>
+                <option th:each="s : ${suppliers}" th:value="${s['name']}" th:text="${s['name']}" th:selected="${param.name} == ${s['name']}"></option>
+            </select>
+        </div>
+        <div class="col-md-3">
+            <input type="text" class="form-control" name="contact" placeholder="Контакт" th:value="${param.contact}">
+        </div>
+        <div class="col-md-3">
+            <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
+        </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-primary w-100">Застосувати фільтр</button>
+        </div>
+        <div class="col-md-2">
+            <a href="/suppliers" class="btn btn-secondary w-100">Очистити фільтри</a>
+        </div>
+    </form>
     <table class="table table-bordered table-striped shadow-lg">
         <thead>
         <tr>
@@ -22,17 +41,18 @@
         </thead>
         <tbody>
         <tr th:each="supplier : ${suppliers}">
-            <td th:text="${supplier.id}"></td>
-            <td th:text="${supplier.name}"></td>
-            <td th:text="${supplier.contact}"></td>
-            <td th:text="${supplier.address}"></td>
+            <td th:text="${supplier['id']}"></td>
+            <td th:text="${supplier['name']}"></td>
+            <td th:text="${supplier['contact']}"></td>
+            <td th:text="${supplier['address']}"></td>
             <td>
-                <a th:href="@{'/suppliers/edit/' + ${supplier.id}}" class="btn btn-warning btn-sm">Редагувати</a>
-                <a th:href="@{'/suppliers/delete/' + ${supplier.id}}" class="btn btn-danger btn-sm">Видалити</a>
+                <a th:href="@{'/suppliers/edit/' + ${supplier['id']}}" class="btn btn-warning btn-sm">Редагувати</a>
+                <a th:href="@{'/suppliers/delete/' + ${supplier['id']}}" class="btn btn-danger btn-sm">Видалити</a>
             </td>
         </tr>
         </tbody>
     </table>
+    <a href="/suppliers/add" class="btn btn-primary mt-3">Додати постачальника</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
