--- a/Information-System/src/main/resources/templates/clients.html
+++ b/Information-System/src/main/resources/templates/clients.html
@@ -23,7 +23,7 @@
             <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
         </div>
         <div class="col-md-2">
-            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть ≥" th:value="${param.havingCount}">
+            <input type="number" class="form-control" name="havingCount" placeholder="HAVING к-сть замовлення ≥" th:value="${param.havingCount}">
         </div>
         <div class="col-md-12">
             <div class="form-check form-check-inline">
@@ -32,7 +32,7 @@
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" name="groupBy" id="groupBy" th:checked="${param.groupBy}">
-                <label class="form-check-label" for="groupBy">Групувати та HAVING</label>
+                <label class="form-check-label" for="groupBy">Групувати за к-стю замовлень</label>
             </div>
         </div>
         <div class="col-md-2">
