--- a/Information-System/src/main/resources/templates/suppliers.html
+++ b/Information-System/src/main/resources/templates/suppliers.html
@@ -9,24 +9,24 @@
 <div th:replace="fragments/menu :: menu"></div>
 <div class="container mt-5">
     <h1 class="mb-4">Постачальники</h1>
-    <form class="row g-3 mb-4" method="get" action="/suppliers">
-        <div class="col-md-3">
-            <select class="form-select" name="name">
-                <option value="">Назва</option>
-                <option th:each="s : ${suppliers}" th:value="${s['name']}" th:text="${s['name']}" th:selected="${param.name} == ${s['name']}"></option>
-            </select>
+    <form class="mb-4" method="get" action="/suppliers">
+        <div class="row g-3">
+            <div class="col-md-3">
+                <select class="form-select" name="name">
+                    <option value="">Назва</option>
+                    <option th:each="s : ${suppliers}" th:value="${s['name']}" th:text="${s['name']}" th:selected="${param.name} == ${s['name']}"></option>
+                </select>
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control" name="contact" placeholder="Контакт" th:value="${param.contact}">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
+            </div>
         </div>
-        <div class="col-md-3">
-            <input type="text" class="form-control" name="contact" placeholder="Контакт" th:value="${param.contact}">
-        </div>
-        <div class="col-md-3">
-            <input type="text" class="form-control" name="address" placeholder="Адреса" th:value="${param.address}">
-        </div>
-        <div class="col-md-2">
-            <button type="submit" class="btn btn-primary w-100">Застосувати фільтр</button>
-        </div>
-        <div class="col-md-2">
-            <a href="/suppliers" class="btn btn-secondary w-100">Очистити фільтри</a>
+        <div class="mt-3">
+            <button type="submit" class="btn btn-primary">Застосувати фільтр</button>
+            <a href="/suppliers" class="btn btn-secondary">Очистити фільтри</a>
         </div>
     </form>
     <table class="table table-bordered table-striped shadow-lg">
