--- a/Information-System/src/main/resources/templates/warehouses.html
+++ b/Information-System/src/main/resources/templates/warehouses.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-3">
             <div class="form-check">
                 <input type="checkbox" id="groupProducts" name="groupProducts" class="form-check-input" th:checked="${groupProducts}">
                 <label class="form-check-label" for="groupProducts">Групувати по складу та к-стю продуктів</label>
